[fix] highlight 2nd item on mobile properly
With the old markup there was a conflict that could never highlight the 2nd nav item on mobile. This now works in the Gown Collection page and the future ones (like this Cocktail collection).

--- a/app/assets/stylesheets/redesign/pages/_lookbook-v2.scss
+++ b/app/assets/stylesheets/redesign/pages/_lookbook-v2.scss
@@ -142,6 +142,10 @@
         margin-top: 15px;
       }
 
+      .local-navigation-row {
+        position: absolute;
+      }
+
       .content-img img {
         padding: 0 5%;
       }
